[gd_scene load_steps=2 format=3 uid="uid://1kyfdl4do4rp"]

[ext_resource type="Script" path="res://systems/wave_system/wave_system.gd" id="1_12db3"]

[node name="WaveSystem" type="Node"]
script = ExtResource("1_12db3")

[node name="NewWave" type="Timer" parent="."]

[connection signal="timeout" from="NewWave" to="." method="_on_new_wave_timeout"]
